--- a/math/index.html
+++ b/math/index.html
@@ -5,11 +5,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>robertvigil.github.io</title>
-<link rel="shortcut icon" type="image/jpg" href='/_images/favicon.ico'/>
+<link rel="shortcut icon" type="image/jpg" href='/images/favicon.ico'/>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
-<link rel="stylesheet" href="/_scripts/googlecode.min.css">
-<script src="/_scripts/highlight.min.js"></script>
+<link rel="stylesheet" href="/scripts/googlecode.min.css">
+<script src="/scripts/highlight.min.js"></script>
 <script>hljs.highlightAll();</script>
 
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -17,9 +17,9 @@
 
 <body>
 <div>
-<img src="/_images/pug.svg" style="vertical-align: middle;"> 
+<img src="/images/pug.svg" style="vertical-align: middle;"> 
 <span style="color: #fafaD2; font-size: xx-large; font-style: bold; vertical-align: middle;">robertvigil.github.io</span><br>
-<span style="font-size: small; vertical-align: top;">tech (and other) notes.. often for my own reference</span><br>
+<span style="font-size: small; vertical-align: top;">notes/snippets/etc.. often for my own reference</span><br>
 <a href="/">home</a> :: 
 <a href="/pwsh">pwsh</a> :: 
 <a href="/pyxl">pyxl</a> :: 
@@ -33,11 +33,11 @@ When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are 
 </p>
 
 <div>
-<a href='https://github.com/robertvigil' target="_blank" style="vertical-align: middle;"><img src="/_images/tabler-icons.io/brand-github.svg" title="GitHub"></a>
-<a href='https://bsky.app/profile/rvigil.bsky.social' target="_blank" style="vertical-align: middle;"><img src="/_images/tabler-icons.io/brand-bluesky.svg" title="GitHub"></a>
-<a href='https://twit.social/@rvigil' target="_blank" style="vertical-align: middle;"><img src="/_images/tabler-icons.io/brand-mastodon.svg" title="Mastodon"></a>
-<a href='https://twitter.com/rvigil' target="_blank" style="vertical-align: middle;"><img src="/_images/tabler-icons.io/brand-twitter.svg" title="Twitter"></a>
-<a href='https://linkedin.com/in/robertvigil1' target="_blank" style="vertical-align: middle;"><img src="/_images/tabler-icons.io/brand-linkedin.svg" title="LinkedIn"></a>
+<a href='https://github.com/robertvigil' target="_blank" style="vertical-align: middle;"><img src="/images/tabler-icons.io/brand-github.svg" title="GitHub"></a>
+<a href='https://bsky.app/profile/rvigil.bsky.social' target="_blank" style="vertical-align: middle;"><img src="/images/tabler-icons.io/brand-bluesky.svg" title="GitHub"></a>
+<a href='https://twit.social/@rvigil' target="_blank" style="vertical-align: middle;"><img src="/images/tabler-icons.io/brand-mastodon.svg" title="Mastodon"></a>
+<a href='https://twitter.com/rvigil' target="_blank" style="vertical-align: middle;"><img src="/images/tabler-icons.io/brand-twitter.svg" title="Twitter"></a>
+<a href='https://linkedin.com/in/robertvigil1' target="_blank" style="vertical-align: middle;"><img src="/images/tabler-icons.io/brand-linkedin.svg" title="LinkedIn"></a>
 </div>
 
 </body>
